# Epitech-Projects

./: README.md
Year1/Cpool part1/Day1/: push_that.sh
Year1/Cpool part1/Day10/: my_advanced_sort_word_array.c  my_sort_word_array.c
Year1/Cpool part1/Day11/: my_apply_on_matching_nodes.c  my_apply_on_nodes.c  my_delete_node.c  my_find_node.c  my_list_size.c  my_params_to_list.c  my_rev_list.c
Year1/Cpool part1/Day13/: Makefile  open_window.c  window
Year1/Cpool part1/Day2/: count_files.sh  find_sh.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  push_that.sh  push_that.sh.save  r_tacpy.sh  test
Year1/Cpool part1/Day3/: my_print_alpha.c  my_print_comb.c  my_print_comb2.c  my_print_digits.c  my_print_revalpha.c
Year1/Cpool part1/Day4/: my_evil_str.c  my_getnbr.c  my_strlen.c
Year1/Cpool part1/Day5/: my_compute_factorial_it.c  my_compute_factorial_rec.c  my_compute_power_it.c  my_compute_power_rec.c  my_compute_square_root.c  my_find_prime_sup.c  my_is_prime.c
Year1/Cpool part1/Day6/: my_revstr.c  my_str_isupper.c  my_strcapitalize.c  my_strcmp.c  my_strcpy.c  my_strlowcase.c  my_strncmp.c  my_strncpy.c  my_strstr.c  my_strupcase.c
Year1/Cpool part1/Day7/: my_strcat.c  my_strncat.c
Year1/Lib/: Makefile  builder  get_line_pars.c  get_update.c  parser.h
Year1/Lib/lib/formatstring/: CMakeLists.txt
Year1/Lib/lib/myprintf/: CMakeLists.txt
Year1/Lib/lib/parser/: CMakeLists.txt  Makefile  parser.h
Year1/Lib/lib/parser/html/: get_balise_content.c  get_content_by_id.c
Year1/Lib/lib/parser/json/: coat.c  get_update.c  update_file.c
(+1060 files in other folders)
